# crypto-data-pipeline

./: .env  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
crypto_pipeline/src/: config.yaml  ingestion.py  landing_crypto_trending.py  performance_report.py  raw_crypto_trending.py
