[tool.poetry]
name = "crypto-pipeline"
version = "0.1.0"
description = ""
authors = ["Alessandro Melo <alessandro.melo2702@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
crypto-data-ingestion = "^0.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
