[tool.poetry]
name = "crypto-pipeline"
version = "0.1.0"
description = ""
authors = ["Alessandro Melo <alessandro.melo2702@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
crypto-data-ingestion = "^0.2.8"
line-profiler = "^4.1.3"
psutil = "^6.0.0"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
